# openwrt_rust_kernel_module

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  openwrt.Makefile  rust_bindings.c  rust_bindings.h
src/: allocator.rs  bindings.rs  kernel_module.rs  lib.rs  panic.rs  printk.rs  sync.rs
targets/: armv7a-linux-kernel-module.json  x86_64-linux-kernel-module.json
