[package]
name = "linux-kernel-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false
bench = false

[dependencies]

[build-dependencies]
bindgen = "0.69.1"

[profile.release]
panic="abort"
lto = true

[profile.dev]
panic="abort"
